--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: jitsen-design
   instagram:
-  linkedin: www.linkedin.com/in/jithendra-seneviratne
+  linkedin: jithendra-seneviratne
 
   pinterest:
   rss: # just type anything here for a working RSS icon
