Modified Air Pollution post

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jit Seneviratne
 
 # Short bio or description (displayed in the header)
-description: Budding Data Scientist and Mid Career Accountant
+description: Data Scientist and Management Accountant (ACMA)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/33611055?s=400&u=490d042887db9a386d87550289e5283e2d2b8d0d&v=4
